; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/adc/extr_cc10001_adc.c_cc10001_adc_remove.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/adc/extr_cc10001_adc.c_cc10001_adc_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.platform_device = type { i32 }
%struct.iio_dev = type { i32 }
%struct.cc10001_adc_device = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.platform_device*)* @cc10001_adc_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cc10001_adc_remove(%struct.platform_device* %0) #0 {
  %2 = alloca %struct.platform_device*, align 8
  %3 = alloca %struct.iio_dev*, align 8
  %4 = alloca %struct.cc10001_adc_device*, align 8
  store %struct.platform_device* %0, %struct.platform_device** %2, align 8
  %5 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %6 = call %struct.iio_dev* @platform_get_drvdata(%struct.platform_device* %5)
  store %struct.iio_dev* %6, %struct.iio_dev** %3, align 8
  %7 = load %struct.iio_dev*, %struct.iio_dev** %3, align 8
  %8 = call %struct.cc10001_adc_device* @iio_priv(%struct.iio_dev* %7)
  store %struct.cc10001_adc_device* %8, %struct.cc10001_adc_device** %4, align 8
  %9 = load %struct.cc10001_adc_device*, %struct.cc10001_adc_device** %4, align 8
  %10 = call i32 @cc10001_adc_power_down(%struct.cc10001_adc_device* %9)
  %11 = load %struct.iio_dev*, %struct.iio_dev** %3, align 8
  %12 = call i32 @iio_device_unregister(%struct.iio_dev* %11)
  %13 = load %struct.iio_dev*, %struct.iio_dev** %3, align 8
  %14 = call i32 @iio_triggered_buffer_cleanup(%struct.iio_dev* %13)
  %15 = load %struct.cc10001_adc_device*, %struct.cc10001_adc_device** %4, align 8
  %16 = getelementptr inbounds %struct.cc10001_adc_device, %struct.cc10001_adc_device* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @clk_disable_unprepare(i32 %17)
  %19 = load %struct.cc10001_adc_device*, %struct.cc10001_adc_device** %4, align 8
  %20 = getelementptr inbounds %struct.cc10001_adc_device, %struct.cc10001_adc_device* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @regulator_disable(i32 %21)
  ret i32 0
}

declare dso_local %struct.iio_dev* @platform_get_drvdata(%struct.platform_device*) #1

declare dso_local %struct.cc10001_adc_device* @iio_priv(%struct.iio_dev*) #1

declare dso_local i32 @cc10001_adc_power_down(%struct.cc10001_adc_device*) #1

declare dso_local i32 @iio_device_unregister(%struct.iio_dev*) #1

declare dso_local i32 @iio_triggered_buffer_cleanup(%struct.iio_dev*) #1

declare dso_local i32 @clk_disable_unprepare(i32) #1

declare dso_local i32 @regulator_disable(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
